[package]
name = "wgpu-gltf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100"}
winit = { version = "0.30.12" }
env_logger = {version = "0.11.5"}
log = { version = "0.4.22"}
wgpu = { version = "27.0.1" }
pollster = { version = "0.4.0" }
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = { version = "0.30.8" }
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg"] }
gltf = { version = "1.4.1", features = ["import", "names"] }
